# gas-orm

./: Cargo.toml  README.md
demo/: Cargo.toml
demo/migrations/: manifest.json
demo/migrations/scripts/: 2026-01-15_very_good_script.sql  2026-01-16_gas.sql  2026-01-22_00_initial_create.sql  2026-01-22_01_remove_no_primary_key.sql  2026-02-01_00_initial_create.sql  2026-02-01_01_gasic.sql  2026-02-01_01_gasovi.sql  2026-02-03_00_gas.sql  2026-02-03_02_hm.sql  2026-02-03_03_aa.sql  2026-02-03_04_aa.sql  2026-02-04_00_initial_create.sql  2026-02-05_00_initial_create.sql  2026-02-06_00_initial_create.sql  2026-02-06_01_gas.sql  2026-02-06_02_gas.sql  2026-02-06_03_gas.sql  2026-02-07_00_initial_create.sql  2026-02-07_01_gas.sql  2026-02-08_00_initial_create.sql  2026-02-08_01_gas.sql  2026-02-08_02_gas.sql  2026-02-08_03_gas.sql  2026-02-08_04_gas.sql  2026-02-08_05_gas.sql  2026-02-10_00_gas.sql  2026-02-10_00_initial_create.sql  2026-02-10_01_add_some_new_columns.sql  2026-02-10_01_gas.sql  2026-02-12_00_initial_create.sql
demo/src/: error.rs  main.rs  tracing_util.rs
demo/src/models/: mod.rs
demo/src/routes/: authors.rs  books.rs  categories.rs  mod.rs  reviews.rs
gas/: Cargo.toml
gas-cli/: Cargo.toml  README.md
gas-cli/src/: error.rs  main.rs
gas-cli/src/binary/: mod.rs
gas-cli/src/commands/: mod.rs
gas-cli/src/commands/migrations/: info.rs  init.rs  migrate.rs  mod.rs  reset.rs  sync.rs
gas-cli/src/diff/: mod.rs
gas-cli/src/manifest/: mod.rs
gas-cli/src/project/: mod.rs
gas-cli/src/sync/: diff.rs  graph.rs  helpers.rs  mod.rs
gas-cli/src/sync/helpers/: diff.rs  mod.rs
gas-cli/src/sync/variants/: add_column.rs  add_default.rs  add_foreign_key_constraint.rs  add_nullable.rs  add_primary_key_constraint.rs  add_serial.rs  add_unique_constraint.rs  create_table.rs  drop_table.rs  mod.rs  (+3 more)
gas-cli/src/util/: common.rs  container.rs  file.rs  mod.rs  path.rs  progress.rs  sql_query.rs  styles.rs
gas/src/: builder.rs  condition.rs  connection.rs  eq.rs  error.rs  field.rs  group.rs  helpers.rs  lib.rs  model.rs  pg_type.rs  relation.rs  row.rs  sort.rs  sql_query.rs  types.rs
gas/src/extra/: axum.rs  mod.rs  tower.rs
gas/src/internals/: def_model.rs  mod.rs  numeric.rs  pg_param.rs  pg_type.rs  serial_compatible.rs  sql_query.rs
gas/src/link/: mod.rs  portable_field_meta.rs  portable_pg_type.rs
gas/src/migrations/: mod.rs
gas/src/ops/: create.rs  create_table.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
gas/src/relation/: forward.rs  inverse.rs
gas/src/util/: async_lies.rs  mod.rs
(+39 files in other folders)
