[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
gas = { path = "../gas" }
serde = { version = "1.0.228", features = ["derive"] }
rust_decimal = "1.39.0"
tokio = { version = "1.48.0", features = ["full", "tokio-macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

