[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
gas = { path = "../gas", features = ["axum", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.17"
tower-http = { version = "0.6.8", features = ["trace"] }
