[package]
name = "gas"
version = "0.1.0"
edition = "2024"

[dependencies]
gas-macros = { path = "../gas-macros" }
rust_decimal = { version = "1.39.0", features = ["macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "rust_decimal", "chrono"] }
thiserror = "2.0.17"
regex = "1.12.2"
lazy_static = "1.5.0"
tracing = "0.1.41"
chrono = "0.4.42"
tokio = "1.48.0"
