[package]
name = "gas"
version = "0.1.0"
edition = "2024"

[features]
axum = ["dep:axum", "tower"]
tower = ["dep:tower", "http"]

[dependencies]
gas-macros = { path = "../gas-macros" }
gas-shared = { path = "../gas-shared" }
rust_decimal = { version = "1.39.0", features = ["macros"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "rust_decimal", "chrono"] }
thiserror = "2.0.17"
regex = "1.12.2"
lazy_static = "1.5.0"
tracing = "0.1.41"
chrono = "0.4.42"
tokio = { version = "1.48.0" }
axum = { version = "0.8.8", optional = true }
tower = { version = "0.5.3", optional = true }
http = { version = "1.4.0", optional = true }
serde = { version = "1.0.228", optional = true }
